# schemaflight

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  live-datahub.yml
docs/: DEMO.md  LIVE_VALIDATION.md  PRD.md  SUBMISSION.md
examples/ecommerce/: catalog.json  rename-email.json
src/schemaflight/: __init__.py  __main__.py  cli.py  datahub_catalog.py  demo_datahub.py  report.py
tests/: test_cli_compile.py  test_compile_rename.py  test_datahub_catalog.py  test_datahub_package_contract.py  test_demo_datahub.py
