[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "schemaflight"
version = "0.1.0"
description = "Compile risky schema changes into lineage-aware migration bundles grounded in DataHub."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "SchemaFlight contributors" }]
dependencies = [
  "sqlglot>=30.12,<31",
]

[project.optional-dependencies]
datahub = [
  "datahub-agent-context[langchain]==1.6.0.13",
]
dev = [
  "duckdb>=1.3,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
schemaflight = "schemaflight.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/schemaflight"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
